adding starting of i3wm

--- a/i3-present/index.html
+++ b/i3-present/index.html
@@ -165,6 +165,16 @@
                     </div>
                 </div>
             </section>
+            <section>
+             <div class="sl-block" data-block-type="image"
+                     style="min-width: 30px; min-height: 30px; width: 950px; left: 20px; top: 50px;">
+                    <div class="sl-block-content"
+                         style="z-index: 13; transition-duration: 0.8s; transition-delay: 1.2s;"
+                         data-animation-type="slide-left">
+                        <img data-natural-width="512" data-natural-height="512" data-src="images/I3_window_manager_screenshot.png"/>
+                    </div>
+                </div>
+            </section>
         </section>
 
         <section data-id="888a28947b2ded7480cb442e4aae13f3">
@@ -216,7 +226,7 @@
                 <div class="sl-block-content" data-placeholder-tag="h2" data-placeholder-text="Title Text"
                      style="z-index: 11; transition-duration: 0.6s; transition-delay: 0.6s;"
                      data-animation-type="slide-right">
-                    <h1>Content</h1>
+                    <h1>I3WM</h1>
                 </div>
             </div>
             <div class="sl-block" data-block-type="text" style="width: 920px; left: 24px; top: 121px; height: auto;"
@@ -224,26 +234,23 @@
                 <div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text"
                      style="z-index: 12; font-size: 140%; line-height: 1.664; transition-delay: 0.6s; transition-duration: 1.2s;"
                      data-has-line-height="" data-animation-type="slide-down">
-                    <ul>
-                        <li class="visible">Game idea and mechanics</li>
-                        <li class="visible">​Project structure</li>
-                        <li class="visible">Levels description and implementations</li>
-                        <li class="visible">Virtual Reality and OpenVR
-                            <ul>
-                                <li>Issues and solutions</li>
-                            </ul>
-                        </li>
-                        <li class="visible">Assets: Meshes, Shaders and Sounds</li>
-                        <li class="visible">Future improvements and ideas</li>
-                    </ul>
+                    <p>
+                        یک برنامه متن بازی که از صفر با زبان برنامه نویسی C نوشته و برای مدیریت پنجره های به صورت کاشی وار طراحی شده است. انجام تنظیمات آن از طریق فایل انجام می شود.
+                    </p>
+                     <p>I3 از سیستم کنترلی خیلی شبیه به
+                         <a href="https://en.wikipedia.org/wiki/Vi" target="_blank">vi</a>
+                         استفاده می کند
+                     </p>
                 </div>
             </div>
             <div class="sl-block" data-block-type="image"
-                 style="min-width: 30px; min-height: 30px; width: 136px; height: 136px; left: 732px; top: 80px;"
+                 style="min-width: 30px; min-height: 30px; width: 150px; height: 150px; left: 432px; top: 550px;"
                  data-block-id="374200d1cf4b34a295b81f955b841c00">
-                <div class="sl-block-content" style="z-index: 13; transition-duration: 0.6s; transition-delay: 0.6s;"
-                     data-animation-type="scale-up"><img data-natural-width="512" data-natural-height="512"
-                                                         data-src="Images/package.svg"></div>
+                <div class="sl-block-content" style="z-index: 13; transition-duration: 1.2s; transition-delay: 0.6s;"
+                     data-animation-type="scale-up">
+                    <a target="_blank" href="https://i3wm.org/">
+                    <img data-natural-width="512" data-natural-height="512"
+                                                         data-src="images/I3_window_manager_logo.svg.png"></a></div>
             </div>
         </section>
         <section class="stack" data-id="e50e3b6babb42a88c0b953ca833dccf7">
