--- a/i3-present/index.html
+++ b/i3-present/index.html
@@ -323,156 +323,55 @@
                     <div class="sl-block-content" data-placeholder-tag="h1" data-placeholder-text="Title Text"
                          style="z-index: 11; font-size: 140%; transition-duration: 0.6s; transition-delay: 0.6s;"
                          data-animation-type="slide-right">
-                        <h1>Levels</h1>
+                        <h1>I3 Desktop</h1>
 
-                        <h2><span style="font-size:0.9em">Structure and mechanics</span></h2>
+                        <h2><span style="font-size:0.9em">اجزاء صفحه</span></h2>
                     </div>
-                </div>
-                <div class="sl-block" data-block-type="shape"
-                     style="min-width: 4px; min-height: 4px; width: 62px; height: 62px; left: 449px; top: 584px;"
-                     data-block-id="9befaaa7b4e01615d449714a45841093">
-                    <div class="sl-block-content" data-shape-type="triangle-down"
-                         data-shape-fill-color="rgb(238, 238, 238)" data-shape-stretch="true"
-                         style="z-index: 12; transition-duration: 1.1s; transition-delay: 1.1s;"
-                         data-animation-type="slide-down">
-                        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100%"
-                             preserveaspectratio="none" viewbox="0 0 62 62">
-                            <polygon points="0,0 62,0 31,62" class="shape-element" fill="rgb(238, 238, 238)"></polygon>
-                        </svg>
-                    </div>
-                </div>
-                <div class="sl-block" data-block-type="image"
-                     style="min-width: 30px; min-height: 30px; width: 124px; height: 124px; left: 418px; top: 42px;"
-                     data-block-id="5065e905de99970b034d0830bc4e07df">
-                    <div class="sl-block-content"
-                         style="z-index: 13; transition-duration: 0.6s; transition-delay: 0.8s;"
-                         data-animation-type="slide-up"><img data-natural-width="512" data-natural-height="512"
-                                                             data-src="Images/lift.svg"></div>
                 </div>
             </section>
+
             <section data-id="fc342755d5577366fbab2bf77fb763a5">
-                <div class="sl-block" data-block-type="text" style="width: 800px; left: 80px; top: 10px; height: auto;"
-                     data-block-id="d3a415d5aebff30667c047761ef16f41">
-                    <div class="sl-block-content" data-placeholder-tag="h1" data-placeholder-text="Title Text"
-                         style="z-index: 10; transition-duration: 0.6s; transition-delay: 0.6s;"
-                         data-animation-type="slide-down">
-                        <h1>Levels</h1>
-                    </div>
+                <div class="sl-block" data-block-type="image"
+                 style="min-width: 30px; min-height: 30px; width: 100%; height: 100%; left: 0px; top: 0px;"
+                 data-block-id="374200d1cf4b34a295b81f955b841c00">
+                <div class="sl-block-content" style="z-index: 13; transition-duration: 1.2s; transition-delay: 0.6s;"
+                     data-animation-type="scale-up">
+                    <img data-natural-width="512" data-natural-height="512"
+                                                         data-src="images/Desktop.png">
                 </div>
-                <div class="sl-block" data-block-type="text"
-                     style="height: auto; min-width: 30px; min-height: 30px; width: 960px; left: 0px; top: 132px;"
-                     data-block-id="a1a649d8309883e8b76cc28e3c4fabe9">
-                    <div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text"
-                         style="z-index: 11; font-size: 107%; transition-duration: 0.6s; transition-delay: 0.9s;"
-                         data-animation-type="slide-down">
-                        <p><span style="font-size:1.2em">Each level has a predefined structure</span></p>
-                    </div>
-                </div>
-                <div class="sl-block" data-block-type="code"
-                     style="min-width: 30px; min-height: 30px; width: 462px; height: 445px; left: 470px; top: 219px;"
-                     data-block-id="0da03e7355098d508d3feb4232bd5c3b">
-                    <div class="sl-block-content"
-                         style="z-index: 12; border-style: solid; font-size: 121%; border-width: 1px; transition-duration: 0.6s; transition-delay: 1.4s;"
-                         data-highlight-theme="obsidian" data-animation-type="slide-up"><pre class="javascript"><code>
-    class Level {
-        /* Variables */
-    
-        Init();
-        Render();
-        UpdateLogic();
-        IsPointedPositionValid();
-        DrawHUD();
-        IsLevelCompleted();
-        SetupOpenglLights();
-    
-        /* Level-specific functions */
-    };
-
-    function Level::Level{}
-
-</code></pre>
-                    </div>
-                </div>
-
-
-                <div class="sl-block" data-block-type="text"
-                     style="height: auto; min-width: 30px; min-height: 30px; width: 470px; left: 0px; top: 299px;"
-                     data-block-id="8e9ea7051f4469a86a19aadf6cf363e2">
-                    <div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text"
-                         style="z-index: 16; transition-duration: 0.6s; transition-delay: 1.2s; line-height: 1.43; letter-spacing: -0.01em; font-size: 110%;"
-                         dir="ui" data-animation-type="scale-down" data-has-line-height="" data-has-letter-spacing="">
-                        <p>Common classes:</p>
-
-                        <ul>
-                            <li>Room.s3d</li>
-                            <li>Elevator.s3d</li>
-                            <li>Utils.s3d</li>
-                            <li>EventTrigger.s3d</li>
-                            <li>Text.s3d</li>
-                        </ul>
-                    </div>
-                </div>
+            </div>
             </section>
+
             <section data-id="61c87dac9f0a3bf0ce45b395ef82c0e4">
                 <div class="sl-block" data-block-type="text" style="width: 800px; left: 72px; top: 9px; height: auto;"
                      data-block-id="c7fc116f327ec100ab72b9e88837d34b">
                     <div class="sl-block-content" data-placeholder-tag="h1" data-placeholder-text="Title Text"
                          style="z-index: 11; transition-duration: 0.6s; transition-delay: 0.6s;"
                          data-animation-type="slide-down">
-                        <h1>Level Menu</h1>
-                    </div>
-                </div>
-
-                <div class="sl-block" data-block-type="text"
-                     style="height: auto; min-width: 30px; min-height: 30px; width: 424px; left: 28px; top: 184px;"
-                     data-block-id="196e46eb39eed67274fc261b140b22cf">
-                    <div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text"
-                         style="z-index: 12; line-height: 1.17; transition-duration: 0.6s; transition-delay: 0.8s;"
-                         data-has-line-height="" data-animation-type="scale-up">
-                        <p>This level will show a list of all the levels allowing the player to choose one of the levels
-                            to play.<br>
-                             </p>
-                    </div>
-                </div>
-                <div class="sl-block" data-block-type="text"
-                     style="height: auto; min-width: 30px; min-height: 30px; width: 466px; left: 472px; top: 485px;"
-                     data-block-id="65fb2ab4cc58eeab5755d3450f9a323a">
-                    <div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text"
-                         style="z-index: 13; transition-duration: 0.6s; transition-delay: 1.2s;"
-                         data-animation-type="slide-right">
-                        <p>Classes used:</p>
-
-                        <ul>
-                            <li>LevelMenuSelector.s3d</li>
-                            <li>PreviewFrame<span style="color:rgb(255, 255, 255); text-align:left">.s3d</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="sl-block" data-block-type="text"
-                     style="height: auto; min-width: 30px; min-height: 30px; width: 466px; left: 28px; top: 435px;"
-                     data-block-id="6ffd2efd83cabc69dc921cf260d5296a">
-                    <div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text"
-                         style="z-index: 14; transition-duration: 0.6s; transition-delay: 1.2s;"
-                         data-animation-type="slide-up">
-                        <p>Pecularities:</p>
-
-                        <ul>
-                            <li>Low poly "Sea"</li>
-                            <li>No elevator in the room</li>
-                            <li>Point and click with vive controllers</li>
-                        </ul>
+                        <h2>کلیدهای کنترلی</h2>
                     </div>
                 </div>
                 <div class="sl-block" data-block-type="image"
-                     style="min-width: 30px; min-height: 30px; width: 466px; height: 262.125px; left: 472px; top: 164px;"
-                     data-block-id="5977f740033443e73f3d17a84396558c">
-                    <div class="sl-block-content"
-                         style="z-index: 15; border-style: solid; border-radius: 7px; transition-duration: 0.6s; transition-delay: 0.8s; border-width: 1px;"
-                         data-animation-type="slide-down"><img data-natural-width="1600" data-natural-height="900"
-                                                               data-src="Images/Untitled.png"></div>
+                 style="min-width: 30px; min-height: 30px; width: 90%; left: 0px; top: 100px;"
+                 data-block-id="374200d1cf4b34a295b81f955b841c00">
+                <div class="sl-block-content" style="z-index: 13; transition-duration: 1.2s; transition-delay: 0.6s;"
+                     data-animation-type="scale-up">
+                    <img data-natural-width="512" data-natural-height="512"
+                                                         data-src="images/keyboard-layer1.png">
+                </div>
+                </div>
+
+                <div class="sl-block" data-block-type="image"
+                 style="min-width: 30px; min-height: 30px; width: 90%; left: 0px; top: 420px;"
+                 data-block-id="374200d1cf4b34a295b81f955b841c00">
+                <div class="sl-block-content" style="z-index: 13; transition-duration: 1.2s; transition-delay: 0.6s;"
+                     data-animation-type="scale-up">
+                    <img data-natural-width="512" data-natural-height="512"
+                                                         data-src="images/keyboard-layer2.png">
+                </div>
                 </div>
             </section>
+
             <section data-id="cc21d73e9fa978de7096aab71d9a2051">
                 <div class="sl-block" data-block-type="text" style="width: 800px; left: 72px; top: 10px; height: auto;"
                      data-block-id="724e084a8d5c75dbf3245c9f55a26969">
